--- a/ENSF480_LAB2.vcxproj.filters
+++ b/ENSF480_LAB2.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="ensf480_lab2\Square.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Circle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CurveCut.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ensf480_lab2\GraphicsWorld.hpp">
@@ -48,6 +54,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ensf480_lab2\Square.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Circle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CurveCut.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
